--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -26,14 +26,16 @@ body {
     padding: 20px;
 }
 
-h1,h2,h3,h4,h5,h6 {
+h1 {
     font-family: var(--heading-font);
-    color: var(--primary-color);
-    
+    color: var(--secondary-color);
+    text-align: center;
+    position: absolute;
 }
 
-h1 {
-    position: absolute;
+h2,h3,h4,h5,h6 {
+    font-family: var(--heading-font);
+    color: var(--primary-color);    
 }
 
 header {
@@ -46,7 +48,6 @@ header {
 }
 
 header img {
-    float: center;
 }
     
 p {
@@ -65,7 +66,7 @@ nav a {
     padding: 1rem;
 }
 
-nav a:link , nav a:visited {
+nav a:link ,nav a:visited {
     color: var(--nav-link-color);
 }
 
@@ -73,22 +74,37 @@ nav a:hover {
     color: var(--nav-hover-link-color);        
 }   
 
+/* step 4 */
+.hero {
+    position: relative;
+}
+
 .hero img {
     display: block;
     width: 100%;
     height: auto;
 }
 
-/* article {
+/* for Step 4 */
+article {
     position: absolute;
 }
 
+/* for Step 4 */
 article img {
+    width: 30%;
+    height: 30%;
     float: right; 
-} */
+    opacity: 0.2;
+}
 
 footer {
     background-color: var(--nav-background-color);
+}
+
+footer img {
+    width: 20px ;
+    float: left;    
 }
 
 footer a:link {
