--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -19,23 +19,10 @@
     --background-color: #0f084bff;
 }   
 
-
 body {
     font-family: var(--paragraph-font);
     max-width: 960px;
     padding: 20px;
-}
-
-h1 {
-    font-family: var(--heading-font);
-    color: var(--secondary-color);
-    text-align: center;
-    position: absolute;
-}
-
-h2,h3,h4,h5,h6 {
-    font-family: var(--heading-font);
-    color: var(--primary-color);    
 }
 
 header {
@@ -45,13 +32,6 @@ header {
     color: var(--accent1-color);
     /* background-color: var(--accent1-color); */
     font-weight: bold;
-}
-
-header img {
-}
-    
-p {
-    padding: 25px
 }
 
 nav {
@@ -72,30 +52,62 @@ nav a:link ,nav a:visited {
 
 nav a:hover {
     color: var(--nav-hover-link-color);        
-}   
-
-/* step 4 */
-.hero {
-    position: relative;
 }
 
+/* step 4 */
 .hero img {
+    position: relative;
     display: block;
     width: 100%;
     height: auto;
 }
 
-/* for Step 4 */
-article {
+.hero h1 {
     position: absolute;
+    font-family: var(--heading-font);
+    color: var(--secondary-color);
+    z-index: 3;
+    top: 50%;
+    left: 15%;
+    text-align: center;
 }
 
-/* for Step 4 */
-article img {
-    width: 30%;
+/* .hero p {
+    position: absolute;
+    font-family: var(--heading-font);
+    color: var(--accent2-color);
+    z-index: 3;
+    top: 60%;
+    left: 0%;
+    text-align: center;
+} */
+
+.hero article {
+    position: absolute;
+    font-family: var(--paragraph-font);
+    color: var(--primary-color);
+    z-index: 3;
+    top: 100%;
+    left: 5%;
+    width: 40%;
     height: 30%;
-    float: right; 
-    opacity: 0.2;
+    text-align: center;
+    background-color: var(--accent1-color);
+    opacity: 0.6;
+}
+
+#happy {
+    width: 20%;
+    float: right;
+}
+
+h2,h3,h4,h5,h6 {
+    font-family: var(--heading-font);
+    color: var(--primary-color);    
+}
+    
+p {
+    padding: 10px
 }
 
 footer {
@@ -109,10 +121,8 @@ footer img {
 
 footer a:link {
     color: var(--nav-link-color);
-    text-decoration: none;
 }
 
 footer a:hover {
     color: var(--nav-hover-link-color);
-    text-decoration: none;     
 }   
