--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -98,10 +98,8 @@ nav a:hover {
     padding: 35px;
     width: 50%;
     color: var(--primary-color);
-    font-family: var(--paragraph-font);'
+    font-family: var(--paragraph-font);
     right: 0%;
-    width: 60%;
-    height: auto;
 }
 
 /* pretty sure this is wrong */ 
@@ -110,7 +108,6 @@ nav a:hover {
     padding-bottom: 10px;
     padding-right: 20px;
     top: -80%;
-    right: 0%;
     width: 30%;
     height: auto;
     float: right;
