--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -12,8 +12,8 @@
     --paragraph-font: Sanchez, serif;
     
     --nav-background-color: #d0fcb3ff;
-    --nav-link-color:#007cbeff;
-    --nav-hover-link-color:#ffffff;
+    --nav-link-color:#ffffff;
+    --nav-hover-link-color: #0f084bff;
     --nav-hover-background-color: #d0fcb3ff;
 
     --background-color: #0f084bff;
@@ -31,12 +31,32 @@ header {
     margin-top: 10px;
     margin-bottom: 10px;
     color: var(--accent1-color);
-    /* background-color: var(--accent1-color); */
+    background-color: var(--accent1-color);
     font-weight: bold;
 }
 
+.grid {
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+
+}
+
+header img {
+    grid-template-columns: 1/2;
+    grid-template-rows: 1/4;
+    background-color: var(--accent2-color);
+
+}
+
+header nav {
+    grid-template-columns: 3/6;
+    grid-template-rows: 4/5;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
 nav {
-    background-color: var(--nav-background-color);
+    /* background-color: var(--nav-background-color); */
     font-size: 1.2rem;
     display: flex;
 }
@@ -45,6 +65,7 @@ nav a {
     display:block;
     text-decoration: none;
     padding: 1rem;
+    color: #ffffff;
 }
 
 nav a:link ,nav a:visited {
@@ -52,7 +73,7 @@ nav a:link ,nav a:visited {
 }
 
 nav a:hover {
-    color: var(--nav-hover-link-color);        
+    color: var(--nav-hover-link-color);
 }
 
 /* step 4 */
@@ -68,7 +89,7 @@ nav a:hover {
     font-family: var(--heading-font);
     color: var(--secondary-color);
     z-index: 3;
-    top: 50%;
+    top: 40%;
     left: 15%;
     text-align: center;
 }
@@ -92,7 +113,7 @@ nav a:hover {
     left: 5%;
     width: 55%;
     height: 30%;
-}
+    }
 
 .hero p{
     padding: 30px;
@@ -116,7 +137,36 @@ nav a:hover {
 
 h2,h3,h4,h5,h6 {
     font-family: var(--heading-font);
-    color: var(--primary-color);    
+    color: var(--primary-color);
+    text-align: center;
+    background-color: var(--accent2-color);
+}
+
+.history-title {
+    font-family: var(--heading-font);
+    color: var(--primary-color);
+}
+.flexbox-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+
+}
+
+.history-box-one {
+    width: 250px;
+    margin: 10px;
+}
+
+.history-box-two {
+    width: 250px;
+    margin: 10px;
+}
+
+.history-box-three {
+    width: 250px;
+    margin: 10px;
 }
     
 p {
