--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,49 +4,68 @@
     box-sizing: border-box;
 }
 
+header, footer {
+    max-width: 840px;
+    align-items: center;
+}
+
 nav {
-    background-color: steelblue;
+    background-color: #004687;
     padding: 10px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 nav a {
     color:white;
     display: block;
+    font-weight: strong;
     padding: 5px;
+    text-decoration: none;
 }
+
+nav a:hover {
+    color:rgba(243, 255, 186, 0.81);
+    border-style: solid;
+    border-color: white;
+    border-width: 2px;
+    border-radius: 25px;
 
 nav a:visited {
     color:white;
 }
 
 h1 {
-    color: steelblue;
+    color: white;
+    background-color: #004687;
+    border-bottom-style: solid;
+    border-color: #004687;
+    border-width: 2px;
 }
  
 main img {
     width: 150px;
     height: auto;
-    border: 1px solid steelblue;
+    border: 1px solid #004687;
     padding: 2px;
-    box-shadow: 0 0 30px gray;
+    box-shadow: 0 0 50px gray;
     float: right;
-}
-
-main {
-    max-width: 840px;
 }
 
 aside {
     width: 30em;
+    margin: 10px;
+    border: 2px;
     text-align: center;
     position: relative;
+    background-color: #004687;
 }
 
 aside h2 {
     position: absolute;
     top: 10px;
     left: 130px;
-    background-color: #1c0d29;
 }
 
 aside img{
@@ -69,6 +88,6 @@ footer{
     margin: 1rem;
     border: 1px;
     padding: 1rem;
-    background-color: #1c0d29;
+    background-color: #004687;
     color: #ffffff; 
 }
