--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -212,3 +212,26 @@ footer a:link {
 footer a:hover {
     color: var(--nav-hover-link-color);
 }   
+
+/*contact page*/
+.google-maps{
+    width:45%;
+    float: right;
+}
+
+form{
+    width: 45%;
+    margin-bottom: 10px;
+    background-color : transparent;
+}
+
+button {
+    padding: 10px;
+    width: 150px;
+    background-color: var(--accent1-color);
+    color: var(--secondary-color);
+    font-weight: bold;
+    font-size: 16px;
+}
+
+button 
