--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -74,6 +74,36 @@ nav a:hover {
     color: var(--nav-hover-link-color);
 }
 
+
+h1{
+    position: absolute;
+    font-family: var(--heading-font);
+    z-index: 3;
+    top: 40%;
+    left: 15%;
+    text-align: center;
+}
+
+.hero h1 {
+    color: var(--secondary-color);
+}
+
+.home h1 {
+    background-color: var(--article-background-color);
+}
+
+h2,h3,h4,h5,h6 {
+    font-family: var(--heading-font);
+    color: var(--primary-color);
+    text-align: center;
+}
+
+/* green background for h2*/
+.green-background
+{
+    background-color: var(--accent2-color);
+}
+
 /* step 4 */
 .hero img {
     position: relative;
@@ -82,20 +112,9 @@ nav a:hover {
     height: auto;
 }
 
-.hero h1 {
-    position: absolute;
-    font-family: var(--heading-font);
-    color: var(--secondary-color);
-    z-index: 3;
-    top: 50%;
-    left: 15%;
-    text-align: center;
-}
-
 .hero article {
     position: absolute;
     background-color: var(--article-background-color);
-    /* opacity: 0.6; */
     z-index: 3;
     top: 100%;
     left: 5%;
@@ -121,16 +140,6 @@ nav a:hover {
     width: 35%;
     height: auto;
     float: right;
-}
-
-h2,h3,h4,h5,h6 {
-    font-family: var(--heading-font);
-    color: var(--primary-color);
-    text-align: center;
-}
-
-h2{
-    background-color: var(--accent2-color);
 }
 
 .history-title {
@@ -217,18 +226,26 @@ footer a:hover {
 }   
 
 /*contact page*/
-.contact-info-header{
+.contact-header {
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    grid-template-columns: 1fr;
+}
+
+/* .contact-info-header{
     align-items: center;
     width: 95%;
 }
 
 .contact-info{
     padding: 0;
-}
+} */
 
 .contact_info_grid{
     display: grid;
     grid-template-columns: 1fr 1fr;
+    padding-top: 70px;
 }
 
 .contact_form_grid{
@@ -245,6 +262,10 @@ form{
 
 fieldset{
     border-color: transparent;
+}
+
+#name, #email, #username, #useremail {
+    width: 60%;
 }
     
 button {
@@ -264,3 +285,67 @@ button {
     flex-wrap: wrap;
 }
 
+contact h2 {
+    background-color: transparent;
+}
+
+/*home page*/
+.home img {
+    position: relative;
+    display: block;
+    width: 100%;
+    height: auto;
+    padding-bottom: 20px;
+}
+
+.action {
+    position: absolute;
+    font-family: var(--heading-font);
+    z-index: 3;
+    top: 110%;
+    right: 40%;
+    text-align: center;
+    background-color: var(--article-background-color);
+    padding: 10px;
+}
+
+.home a:hover {
+        color: var(--nav-link-color);
+}
+
+.home-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.home-grid-one {
+    grid-column: 1/2;
+    grid-row: 1;
+  }
+
+  .home-grid-two {
+    grid-column: 2/3;
+    grid-row: 1;
+  }
+
+  .home-grid-form {
+    grid-column: 3/4;
+    grid-row: 1/3;
+    float: right;
+  }
+
+  .home-grid-four {
+    grid-column: 1/2;
+    grid-row: 2;
+  }
+
+  .home-grid-five {
+    grid-column: 2/3;
+    grid-row: 2;
+  }
+
+figcaption {
+    text-align: center;
+}
