final updates before validation

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -217,7 +217,7 @@ footer img {
 }
 
 footer a:link {
-    color: var(--nav-link-color);
+    color: var(--nav-hover-link-color);
 }
 
 footer a:hover {
